# visual_server

./: .gitmodules  README.md
cpp_server/: CMakeLists.txt  server  vsserv.json
cpp_server/include/: common.h  data_loader.h  database.h  gui.h  heatmap.h  map.h  server.h
cpp_server/src/: common.cpp  data_loader.cpp  database.cpp  gui.cpp  heatmap.cpp  main.cpp  map.cpp  server.cpp
examples/: client.c  client.py  from_android.txt  server.c  server.py  zmq_server.py
